# merchant

./: .gitignore  LICENSE  README.md  merchant.cabal  stack.yaml
app/: CommandParser.hs  Main.hs
src/: ALaCarte.hs  Calculator.hs  Chart.hs  CompdataTest.hs  Compile.hs  Contracts.hs  Declarative.hs  EffectHandlersScope.hs  Ethereum.hs  Graph.hs  Horizon.hs  Language.hs  Merchant.hs  Observable.hs  ParsecExperiments.hs  Procedural.hs  RedditCC.hs  Render.hs  RenderMonadic.hs  Solidity.hs  SolidityLibrary.hs  SolidityObservable.hs  Valuation.hs
test/: CompileContractsSpec.hs
