name:                merchant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rossng/merchant#readme
license:             BSD3
license-file:        LICENSE
author:              Ross Gardiner
maintainer:          ross-public@gmx.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ALaCarte
                     , Declarative
                     , Valuation
                     , Render
                     , Graph
                     , Chart
                     , Observable
                     , Solidity
                     , SolidityObservable
                     , SolidityLibrary
  build-depends:       base >= 4.7 && < 5
                     , free
                     , mtl
                     , lens
                     , graphviz
                     , text
                     , fgl
                     , Chart
                     , Chart-diagrams
                     , neat-interpolation
                     , aeson
                     , iso8601-time
                     , time
                     , process
                     , attoparsec
                     , bytestring
                     , text-show
                     , ilist
                     , Clipboard
  default-language:    Haskell2010

executable merchant
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , merchant
  default-language:    Haskell2010

test-suite merchant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , merchant
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rossng/merchant
